# menu-hub-fastapi

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  users.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: repository.py  session.py  supabase.py
app/middleware/: errors.py  logging.py
app/models/: user.py
app/schemas/: common.py  user.py
app/services/: user_service.py
migrations/: env.py
tests/: conftest.py
tests/integration/: test_auth.py
tests/unit/: test_user_service.py
